2005-07-29  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Remove the title from the check box column.

2005-07-28  Shaun McCance  <shaunm@gnome.org>

	* help/sound-juicer/C/sound-juicer.xml:
	- Added gnome-doc-status processing instruction

2005-07-28  Ross Burton  <ross@burtonini.com>

	* help/sound-juicer/Makefile.am:
	* help/sound-juicer/C/sound-juicer.xml:
	Remove useless comments and use XInclude over entities.

2005-07-27  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/sj-play.c: (on_play_activate):
	  Fix pause/play behaviour.

2005-07-27  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/sj-play.c: (select_track), (cb_hop_track), (setup),
	(on_play_activate):
	  Respect checkboxes for playback, also (#309259).

2005-07-27  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/sj-play.c: (cb_hop_track), (cb_change_button), (idle_state),
	(cb_state):
	  Let change state be executed in idle handler, to prevent theoretical
	  threading issues that make GStreamer feared and famous. Also add a
	  timeout handler before we reset the button label, so it does not
	  switch quickly between PAUSED and PLAYING on track-switch, but
	  stays in play-mode.

2005-07-27  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.schemas.in:
	Fix grammatical mistake.

2005-07-25  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.11.90.

2005-07-25  Ross Burton  <ross@burtonini.com>

	* .cvsignore:
	* Makefile.am:
	* autogen.sh:
	* configure.in:
	* help/sound-juicer/*:
	* m4/.cvsignore
	Ported documentation to gnome-doc-utils.

	* omf.make:
	* xmldocs.make:
	Removed.

2005-07-24  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Fix typo.

2005-07-14  Ross Burton  <ross@burtonini.com>

	* data/sj-record.png:
	New icon (Luca Cavalli)

2005-07-14  Abduxukur Abdurixit <abdurixit@gmail.com>

	* configure.in: Added "ug" to ALL_LINGUAS.

2005-07-14  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS: