@@ -472,6 +472,7 @@
 		  <property name="hover_selection">False</property>
 		  <property name="hover_expand">False</property>
 		  <signal name="row_activated" handler="on_tracklist_row_activate" last_modification_time="Thu, 23 Jun 2005 07:54:15 GMT"/>
+		  <signal name="cursor-changed" handler="on_tracklist_row_selected" last_modification_time="Sat, 30 Juy 2005 00:54:15 GMT"/>
 		</widget>
 	      </child>
 	    </widget>
