@@ -1,3 +1,10 @@
+2005-08-01  Madhan Raj M  <madhanrm@gnome.org>
+
+	* data/sound-juicer.glade:
+	* src/sj-play.c:
+	Adding on_tracklist_row_selected() to play the
+	selected track. Fixes #309268.
+
 2005-07-29  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-main.c:
